objects/hed__Course__c.object
<CustomObject>
    <description>Academic Course offered by a Department or School, for example, English 101 or Ancient History.</description>
    <label>Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Course_code__c</fullName>
        <description>Código del programa que utiliza la universidad para identificar los cursos</description>
        <externalId>true</externalId>
        <label>Código del curso</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>hed__Issuer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The issuing organization of the Course.</description>
        <inlineHelpText>The issuing organization of the Course.</inlineHelpText>
        <label>Issuer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses (Issuer)</relationshipLabel>
        <relationshipName>Issued_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Account__c</fullName>
        <description>The department (Account record) that offers this Course.</description>
        <inlineHelpText>The department (Account record) that offers this Course.</inlineHelpText>
        <label>Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hed__Subject__c</fullName>
        <description>The subject matter of the Course.</description>
        <inlineHelpText>The subject matter of the Course.</inlineHelpText>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Business, Management, and Marketing</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Computer and Information Sciences</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>English Language and Literature/Letters</fullName>
                </value>
                <value>
                    <fullName>Family and Consumer Sciences</fullName>
                </value>
                <value>
                    <fullName>Foreign Languages</fullName>
                </value>
                <value>
                    <fullName>General Studies and Humanities</fullName>
                </value>
                <value>
                    <fullName>Health Professions</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Legal Professions and Studies</fullName>
                </value>
                <value>
                    <fullName>Mathematics and Statistics</fullName>
                </value>
                <value>
                    <fullName>Natural Resources and Conservation</fullName>
                </value>
                <value>
                    <fullName>Philosophy and Religious Studies</fullName>
                </value>
                <value>
                    <fullName>Physical Sciences</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Social Sciences</fullName>
                </value>
                <value>
                    <fullName>Visual and Performing Arts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Course_ID__c</fullName>
        <description>The Course alphanumeric ID., for example, English 101.</description>
        <inlineHelpText>The Course alphanumeric ID., for example, English 101.</inlineHelpText>
        <label>Course ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>This field has been replaced by the Extended Description field, which accomodates longer descriptions. Your admin can migrate text from the Description to the Extended Description field in EDA Settings | Courses.</description>
        <inlineHelpText>This field has been replaced by the Extended Description field, which accomodates longer descriptions. Your admin can migrate text from the Description to the Extended Description field in EDA Settings | Courses.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hed__Credit_Hours__c</fullName>
        <label>Credit Hours</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Academic_Level__c</fullName>
        <description>The grade-level, developmental level, or age-level of the Course.</description>
        <inlineHelpText>The Academic Level of the Course. For example, the Course was offered in high school.</inlineHelpText>
        <label>Academic Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-K/Preschool</fullName>
                </value>
                <value>
                    <fullName>Elementary</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Doctoral</fullName>
                </value>
                <value>
                    <fullName>Post-Baccalaureate Certificate</fullName>
                </value>
                <value>
                    <fullName>Adult Education</fullName>
                </value>
                <value>
                    <fullName>Professional Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Extended_Description__c</fullName>
        <description>Use this field to describe the Course, up to a maxium of 131,000 characters. This field replaces the Description field.</description>
        <inlineHelpText>Use this field to describe the Course, up to a maxium of 131,000 characters. This field replaces the Description field.</inlineHelpText>
        <label>Extended Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Credentialing_Identifier__c</fullName>
        <description>An International Resource Identifier that uniquely identifies this credential.</description>
        <externalId>true</externalId>
        <inlineHelpText>An International Resource Identifier that uniquely identifies this credential.</inlineHelpText>
        <label>Credentialing Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>hed__Account__c</columns>
        <columns>hed__Course_ID__c</columns>
        <columns>hed__Credit_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>